--- a/my_project/app1/templates/app/footer.html
+++ b/my_project/app1/templates/app/footer.html
@@ -1,89 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>Document</title>
+    <style>
+        /* Custom styles */
+        .footer-link {
+            text-decoration: none;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-      <!-- Bootstrap CSS -->
-  
-        <footer class="bg-dark text-white pt-5 pb-4">
-       <div class="container text-center text-md-left">
-        <div class="row text-center text-md-left">
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+<footer class="bg-dark text-white py-5">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3 mb-4">
                 <h5 class="mb-4 font-weight-bold text-warning">Company Name</h5>
                 <p>Here you can use rows</p>
             </div>
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <div class="col-md-2 mb-4">
                 <h5 class="mb-4 font-weight-bold text-warning">Products</h5>
-                <p><a href="" class="text-white" style="text-decoration: none;">Theprovider</a></p>
-                <p><a href="" class="text-white" style="text-decoration: none;">Adaptiv</a></p>
-                <p><a href="" class="text-white" style="text-decoration: none;">Source</a></p>
-                <p><a href="" class="text-white" style="text-decoration: none;">Theprovider</a></p>
+                <p><a href="#" class="footer-link">Theprovider</a></p>
+                <p><a href="#" class="footer-link">Adaptiv</a></p>
+                <p><a href="#" class="footer-link">Source</a></p>
+                <p><a href="#" class="footer-link">Theprovider</a></p>
             </div>
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-              <h5 class="mb-4 font-weight-bold text-warning">Useful Link</h5>
-              <p><a href="" class="text-white" style="text-decoration: none;">Your Account</a></p>
-                <p><a href="" class="text-white" style="text-decoration: none;">Become A Affillites</a></p>
-                <p><a href="" class="text-white" style="text-decoration: none;">Shipping rates</a></p>
-                <p><a href="" class="text-white" style="text-decoration: none;">Help</a></p>
+            <div class="col-md-3 mb-4">
+                <h5 class="mb-4 font-weight-bold text-warning">Useful Links</h5>
+                <p><a href="#" class="footer-link">Your Account</a></p>
+                <p><a href="#" class="footer-link">Become An Affiliate</a></p>
+                <p><a href="#" class="footer-link">Shipping Rates</a></p>
+                <p><a href="#" class="footer-link">Help</a></p>
             </div>
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <div class="col-md-4">
                 <h5 class="mb-4 font-weight-bold text-warning">Contact</h5>
-                <p>
-                    <i class="fas fa-home mr-3"></i> Mathura(281502),UP
-                </p>
-                  <p>
-                    <i class="fas fa-envelope mr-3"></i>  kaushikkanha@gmail.com
-                </p>
-                  <p>
-                    <i class="fas fa-phone mr-3"></i> +91 6396021232
-                </p>
-                </div>
-              <hr class="mb-4">
-              <div class="row align-items-center">
-                <div class="col-md-7 col-lg-8">
-                    <p>Copyright 2024 all right reserved
-                    <a href=""style="text-decoration:none">
-                      <strong class="text-warning">The Provader</strong>
-                </a></p>
-                </div>
-          <div class="col-md-5 col-lg-4">
-              <div class="text-center text-md-right">
-                  <ul class="list-unstyled list-inline">
-                <li class="list-inline-item">
-                  <a href="" class="btn-floating btn-sm text-white" style="font-size: 22px;"><i class="fab fa-facebook"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="" class="btn-floating btn-sm text-white" style="font-size: 22px;"><i class="fab fa-twitter"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="https://github.com/Kanhakaushik/Session-Project" class="btn-floating btn-sm text-white" style="font-size: 22px;"><i class="fa-brands fa-github"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="www.linkedin.com/in/kanha-kaushik-20b4a3298" class="btn-floating btn-sm text-white" style="font-size: 22px;"><i class="fab fa-linkedin-in"></i></a>
-                </li>
-                <li class="list-inline-item">
-                  <a href="" class="btn-floating btn-sm text-white" style="font-size: 22px;"><i class="fab fa-instagram"></i></a>
-                </li>
-                  </ul>
-              </div>
-          </div>
+                <p><i class="fas fa-home me-3"></i> Mathura(281502), UP</p>
+                <p><i class="fas fa-envelope me-3"></i> kaushikkanha6396@gmail.com</p>
+                <p><i class="fas fa-phone me-3"></i> +91 6396021232</p>
             </div>
         </div>
-       </div>
-    </footer>
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+        <hr class="mb-4">
+        <div class="row align-items-center">
+            <div class="col-md-7 col-lg-8 text-center text-md-start">
+                <p>Copyright 2024 all rights reserved
+                    <a href="#" class="text-warning text-decoration-none">The Kanha</a>
+                </p>
+            </div>
+            <div class="col-md-5 col-lg-4 text-center text-md-end">
+                <ul class="list-unstyled list-inline">
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-floating btn-sm text-white"><i class="fab fa-facebook-f"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-floating btn-sm text-white"><i class="fab fa-twitter"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://github.com/Kanhakaushik/Session-Project" class="btn btn-floating btn-sm text-white"><i class="fab fa-github"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="https://www.linkedin.com/in/kanha-kaushik-20b4a3298" class="btn btn-floating btn-sm text-white"><i class="fab fa-linkedin-in"></i></a>
+                    </li>
+                    <li class="list-inline-item">
+                        <a href="#" class="btn btn-floating btn-sm text-white"><i class="fab fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!--
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
-  </body>
-  </html>
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+</body>
+</html>
